# GlobalHub

./: .gitignore  BRAND.md  LICENSE  README.md  _quarto.yml  app.py  index.qmd  pyproject.toml  requirements.txt
.quarto/project-cache/: deno-kv-file-shm  deno-kv-file-wal
content/: about.qmd
content/documentation/: cost_effectiveness.qmd  data_dictionary.qmd  forecasting.qmd  glossary.qmd  horizon_scanning.qmd  horizon_sources.qmd  inclusion_criteria.qmd  integration_pipeline.qmd  likelihood_of_success.qmd  methodology.qmd  mnch_framework.qmd  product_milestones.qmd  source_methods.qmd  technical_guide.qmd  validation.qmd
docs/: BRAND.html  PopulationDataModel.csv  README.md  RawDataModel.csv  index.html  robots.txt  search.json  sitemap.xml
docs/content/: about.docx  about.html
docs/content/documentation/: cost_effectiveness.html  data_dictionary.html  forecasting.html  glossary.html  horizon_scanning.html  horizon_sources.html  inclusion_criteria.html  integration_pipeline.html  likelihood_of_success.html  methodology.html  mnch_framework.html  (+4 more)
docs/www/: ALIGN_health_product_data_horizon.csv  ALIGN_health_product_data_horizon_wide.csv  PopulationData.csv  horizon_temporary_products.csv  horizon_temporary_products_lai.csv  styles.css
modules/: AboutALIGN.docx  about.html  about.py  comparison.py  overview_and_innovations.py
scripts/: data_conversion_horizon.R  data_harmonizer.py  fixing_manual_data.qmd  temp_manual.R
utils/: config.py  data_loader.py  theme.py  ui_helpers.py
www/: ALIGN_health_product_data_horizon_cleaned.csv  horizon.csv  styles.css
(+16 files in other folders)
