[project]
name = "mkt-intel-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datetime>=6.0",
    "jinja2>=3.1.6",
    "libsass>=0.23.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "rsconnect>=1.28.2",
    "shiny>=1.5.1",
    "shinywidgets>=0.7.1",
]
